force-app/main/default/objects/Form__c/fields/Active_Period__c.field-meta.xml
<CustomField>
    <fullName>Active_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Period</label>
    <type>Checkbox</type>
</CustomField>