force-app/main/default/objects/Form__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>