force-app/main/default/objects/Form__c/fields/Date_Time_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Completed__c</fullName>
    <label>Date/Time Completed</label>
    <type>DateTime</type>
</CustomField>