force-app/main/default/objects/Form__c/fields/Question_Score__c.field-meta.xml
<CustomField>
    <fullName>Question_Score__c</fullName>
    <formula>( Answer__c *  Points__c ) /  Total_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Score</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>