force-app/main/default/objects/Form__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <referenceTo>Score__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>