force-app/main/default/objects/Form__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <label>Total Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>